--- a/Sportapp/SportMarket/SportMarket/MainWindow.xaml
+++ b/Sportapp/SportMarket/SportMarket/MainWindow.xaml
@@ -21,7 +21,7 @@
 
         </Grid>
 
-        <Frame x:Name="MainFrame" Grid.Row="1"></Frame>
+        <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden"></Frame>
         
         
         
