--- a/sport/sportapp/sportapp/Pages/addeditpage.xaml
+++ b/sport/sportapp/sportapp/Pages/addeditpage.xaml
@@ -19,11 +19,11 @@
                 
                 <TextBox x:Name="NameTB" Height="25" Width="300" Text="Full Name" FontSize="15"></TextBox>
                 <ComboBox x:Name="RoleTB" Height="25" Width="300" Margin="0,20,0,0" FontSize="15"
-                          ItemsSource="{Binding RoleName, StringFormat={}{0}}"></ComboBox>
+                          ItemsSource="{Binding RoleName, StringFormat={}{0}}"  DisplayMemberPath="RoleName"></ComboBox>
                 <TextBox x:Name="BirthDateTB" Height="25" Width="300" Margin="0,20,0,0" Text="Date of Birth" FontSize="15"></TextBox>
                 <TextBox x:Name="PhoneTB" Height="25" Width="300" Margin="0,20,0,0" Text="Phone Number" FontSize="15"></TextBox>
                 <ComboBox x:Name="SexTB" Height="25" Width="300" Margin="0,20,0,0" FontSize="15"
-                          ItemsSource="{Binding Gender, StringFormat={}{0}}"></ComboBox>
+                          ItemsSource="{Binding Gender, StringFormat={}{0}}" DisplayMemberPath="Gender"></ComboBox>
                 <TextBox x:Name="EmailTB" Height="25" Width="300" Margin="0,20,0,0" Text="Email" FontSize="15"></TextBox>
                 <TextBox x:Name="LoginTB" Height="25" Width="300" Margin="0,20,0,0" Text="Login" FontSize="15"></TextBox>
                 <Label Content="Password:" HorizontalAlignment="Center" FontSize="15" Margin="0,10,0,0" ></Label>
